--- a/vistocar_inspect/package.json
+++ b/vistocar_inspect/package.json
@@ -37,14 +37,13 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
-    "ionic-stepper": "^1.1.0",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.0",
     "@ionic/lab": "1.0.11",
     "typescript": "~2.6.2"
   },
