--- a/vistocar_inspect/package.json
+++ b/vistocar_inspect/package.json
@@ -40,6 +40,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ngx-cookie-service": "^2.0.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
