--- a/vistocar_inspect/package.json
+++ b/vistocar_inspect/package.json
@@ -31,10 +31,10 @@
     "@totvs/mobile-theme": "^1.0.0",
     "@totvs/thf-theme": "^2.4.0",
     "cordova-android": "7.1.1",
-    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.2.5",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
