docker file adjusts

--- a/vistocar_inspect/Dockerfile
+++ b/vistocar_inspect/Dockerfile
@@ -1,23 +1,16 @@
-ARG NODE_VERSION=latest
+ARG  NODE_VERSION=alpine
 FROM node:${NODE_VERSION}
 
-# Create a directory where our app will be placed
-RUN mkdir -p /usr/src/app
+# install dependencies
+WORKDIR /opt/app
+COPY package.json package-lock.json* ./
+RUN npm cache clean --force && npm install
 
-# Change directory so that our commands run inside this new directory
-WORKDIR /usr/src/app
+# copy app source to image _after_ npm install so that
+# application code changes don't bust the docker cache of npm install step
+COPY . /opt/app
 
-# Copy dependency definitions
-COPY package.json /usr/src/app
+# set application PORT and expose docker PORT, 80 is what Elastic Beanstalk expects
+EXPOSE 8080
 
-# Install dependecies
-RUN npm install
-
-# Get all the code needed to run the app
-COPY . /usr/src/app
-
-# Expose the port the app runs in
-EXPOSE 8200
-
-# Serve the app
-CMD ["npm", "run", "start-lab"]
+CMD [ "npm", "run", "start-lab" ]
